wip lgbm-neptune reinforcement

--- a/staple_train_lgbm.ipynb
+++ b/staple_train_lgbm.ipynb
@@ -10,9 +10,12 @@
     "import lightgbm as lgb\n",
     "import neptune.new as neptune\n",
     "from neptune.new.integrations.lightgbm import NeptuneCallback\n",
-    "from sklearn.datasets import load_digits\n",
     "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from neptune.new.types import File\n",
     "import pandas_gbq as gbq\n",
+    "\n",
     "from lib.datasetLoader import datasetLoader"
    ]
   },
@@ -275,22 +278,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "id": "18024275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df[df['client_year']!=2020]\n",
+    "df_test = df[df['client_year']==2020]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "9f58c7d4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Info (NVML): NVML Shared Library Not Found. GPU usage metrics may not be reported. For more information, see https://docs-legacy.neptune.ai/logging-and-managing-experiment-results/logging-experiment-data.html#hardware-consumption \n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://app.neptune.ai/eritsi/staple/e/STAP-11\n",
+      "https://app.neptune.ai/eritsi/staple/e/STAP-13\n",
       "Remember to stop your run once you’ve finished logging your metadata (https://docs.neptune.ai/api-reference/run#stop). It will be stopped automatically only when the notebook kernel/interactive console is terminated.\n"
      ]
     }
@@ -307,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "35d45554",
    "metadata": {},
    "outputs": [],
@@ -315,6 +322,123 @@
     "# Create neptune callback\n",
     "neptune_callback = NeptuneCallback(run=run)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a0175ca4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define parameters\n",
+    "params = {\n",
+    "    'boosting_type': 'gbdt',\n",
+    "#     'num_leaves': 1024,\n",
+    "    'max_depth': -1,\n",
+    "    'learning_rate': 0.1,\n",
+    "    'n_estimators': 100,\n",
+    "    'subsample_for_bin': 200000,\n",
+    "    'objective': None,\n",
+    "    'class_weight': None,\n",
+    "    'min_split_gain': 0.0,\n",
+    "    'min_child_weight': 0.001,\n",
+    "#     'min_child_samples': 100,  # ParaTuning20,\n",
+    "    'subsample': 1.0,\n",
+    "    'subsample_freq': 0,\n",
+    "    'colsample_bytree': 1.0,\n",
+    "    'reg_alpha': 0.0,\n",
+    "    'reg_lambda': 0.0,\n",
+    "    'random_state': 0,\n",
+    "    'n_jobs': -1,\n",
+    "    'silent': True,\n",
+    "    'importance_type': 'split'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0084d6ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspace/.pip-modules/lib/python3.8/site-packages/lightgbm/sklearn.py:598: UserWarning: 'silent' argument is deprecated and will be removed in a future release of LightGBM. Pass 'verbose' parameter via keyword arguments instead.\n",
+      "  _log_warning(\"'silent' argument is deprecated and will be removed in a future release of LightGBM. \"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LGBMRegressor(random_state=0, silent=True)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, y_train = df_train[['product_code', 'comp_cluster',\n",
+    "                       'sales_count_before_1w', 'sales_count_before_2w', 'sales_count_before_3w', 'sales_count_before_4w', \n",
+    "                       'mean_2w_sales_during_2m', 'std_sales_count', 'pred_yoy_8w_2wLAG' ]], df_train['sales_count']\n",
+    "X_test, y_test = df_test[['product_code', 'comp_cluster',\n",
+    "                       'sales_count_before_1w', 'sales_count_before_2w', 'sales_count_before_3w', 'sales_count_before_4w', \n",
+    "                       'mean_2w_sales_during_2m', 'std_sales_count', 'pred_yoy_8w_2wLAG' ]], df_test['sales_count']\n",
+    "model = lgb.LGBMRegressor(**params)\n",
+    "model.fit(X_train, y_train, callbacks=[NeptuneCallback(run=run)],)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f2b16f57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "511891eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STEP4:\n",
+    "# Log evaluation results in tabular format\n",
+    "dataframe = pd.DataFrame(\n",
+    "    data={\n",
+    "        'y_test': y_test, \n",
+    "        'y_pred': y_pred, \n",
+    "        #'y_pred_probability':np.argmax(y_pred, axis=1),\n",
+    "    }\n",
+    ")\n",
+    "run['evaluation/predictions'].upload(File.as_html(dataframe))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0c03a1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STEP 5:\n",
+    "# upload pickle file\n",
+    "run['model/pickled_model'].upload(File.as_pickle(model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "707c362a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -333,75 +457,6 @@
     ")\n",
     "lgb_train = lgb.Dataset(X_train, y_train)\n",
     "lgb_eval = lgb.Dataset(X_test, y_test, reference=lgb_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "0084d6ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LGBMRegressor(random_state=0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train, y_train = df[['product_code', 'comp_cluster',\n",
-    "                       'sales_count_before_1w', 'sales_count_before_2w', 'sales_count_before_3w', 'sales_count_before_4w', \n",
-    "                       'mean_2w_sales_during_2m', 'std_sales_count', 'pred_yoy_8w_2wLAG' ]], df['sales_count']\n",
-    "model = lgb.LGBMRegressor(random_state=0)\n",
-    "model.fit(X_train, y_train, callbacks=[NeptuneCallback(run=run)],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "f2b16f57",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3418/724951027.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLGBMRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mNeptuneCallback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_test' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred = model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a0175ca4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define parameters\n",
-    "params = {\n",
-    "    \"boosting_type\": \"gbdt\",\n",
-    "    \"objective\": \"multiclass\",\n",
-    "    \"num_class\": 10,\n",
-    "    \"metric\": [\"multi_logloss\", \"multi_error\"],\n",
-    "    \"num_leaves\": 21,\n",
-    "    \"learning_rate\": 0.05,\n",
-    "    \"feature_fraction\": 0.9,\n",
-    "    \"bagging_fraction\": 0.8,\n",
-    "    \"bagging_freq\": 5,\n",
-    "    \"max_depth\": 12,\n",
-    "}"
    ]
   },
   {
